1.6.2

  * Released OpenFLUID-Builder application (GUI), as a preview release
  * Released OpenFLUID::guicommon API, as a preview release
  * Added OpenFLUID Market system
  * Added OpenFLUID projects management, embedding simulation input and output datasets
  * Added automatic parallelization capabilities based on spatial independancy 
    (using multi-threading) 
  * Added simulation profiling capabilities  
  * Updated .fluidX files I/O
  * Removed .xml file extensions as standard file extension for input dataset
  * Updated OpenFLUID API
  * Fixed various bugs



1.6.1

  * Fixed bug in spatial loops when units class does not exist
  * Added getSeconds() method in SimulationStatus, giving the number 
    of simulated seconds since the beginning of the simulation
  * Updated documentation



1.6.0

  * Refactored framework architecture
  * Introduced global process order (transverse to units classes)
  * Added primitives methods in order to modify the spatial domain graph
  * Added primitives methods in order to add input data 
    from simulation functions
  * Removed "progressive output" feature, replaced by circular memory manager 
    and files buffers 
  * Refactored structure for outputs savings
  * Added log system for simulation functions messages
  * Added actions listeners
  * Added FluidXWriter feature for writing FluidX files from an instanciated
    simulation   
  * Cleaned and reorganized source code
  * Fixed some bugs



1.5.0

  * Added data generators useable in models descriptions
  * Introduced global parameters for models descriptions
  * Added ability to use strings and integers as input data, in addition to 
    double precision values
  * Introduced parents/children relationships for spatial units
  * Introduced FluidX format for input datasets, now with ability to use single 
    or many files
  * Introduced precision setting for output of floating point values   
  * Added environment variable OPENFLUID_FUNCS_PATH (path to search for 