@@ -91,7 +91,7 @@ For example, the nineteenth of April, two-thousand seven, at eleven hours, ten m
 \begin{itemize}
 \item "\verb|%d/%m/%Y %H:%M:%S|" will give "\verb|19/04/2007 10:11:25|"
 \item "\verb|%Y-%m-%d %H.%M|" will give "\verb|2007-04-19 10.11|"
-\item "\verb|%Y\t%m\t%d\t%H\t%M\t%S|" will give "\verb|2007	04	19	10	11	25|"
+\item "\verb|%Y\t%m\t%d\t%H\t%M\t%S|" will give "\verb|2007 04  19  10  11  25|"
 \end{itemize}
 
 \newpage 
@@ -230,7 +230,7 @@ For example, the nineteenth of April, two-thousand seven, at eleven hours, ten m
 
 \bigskip 
 
-\section{File formats for \texttt{interp} data generator}
+\section{File formats for \texttt{interp} or \texttt{inject} data generator}
 
 \subsection{Sources}
 The sources file format is an XML based format which defines a list of sources
@@ -265,11 +265,11 @@ of values in time. The six first columns are the date using the following format
 \texttt{YYYY MM DD HH MM SS}. The 7$^{th}$ column is the value itself.
 
  \begin{lstlisting}[language=,title=\footnotesize\textit{example of a source data file}]
-1999 12 31 12 00 00	-1.0
-1999 12 31 23 00 00	-5.0
-2000 01 01 00 30 00	-15.0
-2000 01 01 00 40 00	-5.0
-2000 01 01 01 30 00	-15.0
+1999 12 31 12 00 00 -1.0
+1999 12 31 23 00 00 -5.0
+2000 01 01 00 30 00 -15.0
+2000 01 01 00 40 00 -5.0
+2000 01 01 01 30 00 -15.0
 \end{lstlisting}
 
 
