@@ -1,0 +1,65 @@
+2000 00 00 45 00 00 -1
+2000 01 01 00 00 00 0
+2000 01 01 00 01 00 1
+2000 01 01 00 02 00 2
+2000 01 01 00 03 00 3
+2000 01 01 00 04 00 4
+2000 01 01 00 05 00 5
+2000 01 01 00 06 00 6
+2000 01 01 00 07 00 7
+2000 01 01 00 08 00 8
+2000 01 01 00 09 00 9
+2000 01 01 00 10 00 10
+2000 01 01 00 11 00 11
+2000 01 01 00 12 00 12
+2000 01 01 00 13 00 13
+2000 01 01 00 14 00 14
+2000 01 01 00 15 00 15
+2000 01 01 00 16 00 16
+2000 01 01 00 17 00 17
+2000 01 01 00 18 00 18
+2000 01 01 00 19 00 19
+2000 01 01 00 20 00 20
+2000 01 01 00 21 00 21
+2000 01 01 00 22 00 22
+2000 01 01 00 23 00 23
+2000 01 01 00 24 00 24
+2000 01 01 00 25 00 25
+2000 01 01 00 26 00 26
+2000 01 01 00 27 00 27
+2000 01 01 00 28 00 28
+2000 01 01 00 29 00 29
+2000 01 01 00 30 00 30
+2000 01 01 00 31 00 31
+2000 01 01 00 32 00 32
+2000 01 01 00 33 00 33
+2000 01 01 00 34 00 34
+2000 01 01 00 35 00 35
+2000 01 01 00 36 00 36
+2000 01 01 00 37 00 37
+2000 01 01 00 38 00 38
+2000 01 01 00 39 00 39
+2000 01 01 00 40 00 40
+2000 01 01 00 41 00 41
+2000 01 01 00 42 00 42
+2000 01 01 00 43 00 43
+2000 01 01 00 44 00 44
+2000 01 01 00 45 00 45
+2000 01 01 00 46 00 46
+2000 01 01 00 47 00 47
+2000 01 01 00 48 00 48
+2000 01 01 00 49 00 49
+2000 01 01 00 50 00 50
+2000 01 01 00 51 00 51
+2000 01 01 00 52 00 52
+2000 01 01 00 53 00 53
+2000 01 01 00 54 00 54
+2000 01 01 00 55 00 55
+2000 01 01 00 56 00 56
+2000 01 01 00 57 00 57
+2000 01 01 00 58 00 58
+2000 01 01 00 59 00 59
+2000 01 01 01 00 00 60
+2000 01 01 01 01 00 61
+2000 01 01 01 02 00 62
+
