@@ -1,0 +1,61 @@
+2000 01 01 00 00 00 0.0
+2000 01 01 00 01 00 0.0
+2000 01 01 00 02 00 0.0
+2000 01 01 00 03 00 0.0
+2000 01 01 00 04 00 0.0
+2000 01 01 00 05 00 0.0
+2000 01 01 00 06 00 0.0
+2000 01 01 00 07 00 0.0
+2000 01 01 00 08 00 0.0
+2000 01 01 00 09 00 0.0
+2000 01 01 00 10 00 0.0
+2000 01 01 00 11 00 0.0
+2000 01 01 00 12 00 0.0
+2000 01 01 00 13 00 0.0
+2000 01 01 00 14 00 0.0
+2000 01 01 00 15 00 0.0
+2000 01 01 00 16 00 0.0
+2000 01 01 00 17 00 0.0
+2000 01 01 00 18 00 0.0
+2000 01 01 00 19 00 0.0
+2000 01 01 00 20 00 0.0
+2000 01 01 00 21 00 0.0
+2000 01 01 00 22 00 0.0
+2000 01 01 00 23 00 0.0
+2000 01 01 00 24 00 0.0
+2000 01 01 00 25 00 0.0
+2000 01 01 00 26 00 0.0
+2000 01 01 00 27 00 0.0
+2000 01 01 00 28 00 0.0
+2000 01 01 00 29 00 0.0
+2000 01 01 00 30 00 0.0
+2000 01 01 00 31 00 0.0
+2000 01 01 00 32 00 0.0
+2000 01 01 00 33 00 0.0
+2000 01 01 00 34 00 0.0
+2000 01 01 00 35 00 0.0
+2000 01 01 00 36 00 0.0
+2000 01 01 00 37 00 0.0
+2000 01 01 00 38 00 0.0
+2000 01 01 00 39 00 0.0
+2000 01 01 00 40 00 0.0
+2000 01 01 00 41 00 0.0
+2000 01 01 00 42 00 0.0
+2000 01 01 00 43 00 0.0
+2000 01 01 00 44 00 0.0
+2000 01 01 00 45 00 0.0
+2000 01 01 00 46 00 0.0
+2000 01 01 00 47 00 0.0
+2000 01 01 00 48 00 0.0
+2000 01 01 00 49 00 0.0
+2000 01 01 00 50 00 0.0
+2000 01 01 00 51 00 0.0
+2000 01 01 00 52 00 0.0
+2000 01 01 00 53 00 0.0
+2000 01 01 00 54 00 0.0
+2000 01 01 00 55 00 0.0
+2000 01 01 00 56 00 0.0
+2000 01 01 00 57 00 0.0
+2000 01 01 00 58 00 0.0
+2000 01 01 00 59 00 0.0
+2000 01 01 01 00 00 0.0
